--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,22 +1,27 @@
-@*
- * This template is called from the `index` template. This template
- * handles the rendering of the page header and body tags. It takes
- * two arguments, a `String` for the title of the page and an `Html`
- * object to insert into the body of the page.
- *@
-@(title: String)(content: Html)
+@(title: String, mainClass: Option[String] = None, bodyEnd: Html = Html(""), headExtra: Html = Html(""), links: Html = Html(""))(content: Html)
 
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        @* Here's where we render the page title `String`. *@
-        <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-    </head>
-    <body>
-        @* And here's where we render the `Html` object containing
-         * the page content. *@
-        @content
-    </body>
-</html>
+@head = {
+    <link href="@routes.Assets.versioned("stylesheets/main.css")" rel="stylesheet" type="text/css" />
+    <link href="@routes.Assets.versioned("stylesheets/elements.css")" media="screen" rel="stylesheet" type="text/css" />
+@headExtra
+}
+
+@empty = {}
+
+
+@insideHeader = {
+    <div class="header-proposition">
+        <div class="content">
+            <nav id="proposition-menu">
+                <a href="" id="proposition-name">HM Revenue &amp; Customs</a>
+            </nav>
+        </div>
+    </div>
+}
+
+@layouts.govuk_template2(Some(title), None)(head, empty, bodyEnd, insideHeader, empty, empty) {
+    <main id="content" class="@mainClass" role="main">
+    @content
+
+    </main>
+}
