--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -7,3 +7,9 @@ a.button {
     text-decoration: none;
     color: initial;
 }
+
+.organisation-logo-stacked-hmrc {
+    padding: 20px 0 0 6px;
+    background: url("/assets/images/hmrc_crest_27px_x2.png") no-repeat 5px top;
+    background-size: auto 20px
+}
