--- a/app/views/layouts/govuk_template2.scala.html
+++ b/app/views/layouts/govuk_template2.scala.html
@@ -11,19 +11,19 @@
       (function(){if(navigator.userAgent.match(/IEMobile\/10\.0/)){var d=document,c="appendChild",a=d.createElement("style");a[c](d.createTextNode("@@-ms-viewport{width:auto!important}"));d.getElementsByTagName("head")[0][c](a);}})();
     </script>
 
-    <!--[if gt IE 8]><!--><link href="@routes.Assets.versioned("stylesheets/application.css")" media="screen" rel="stylesheet" type="text/css" /><!--<![endif]-->
-    <!--[if IE 6]><link href="@routes.Assets.versioned("stylesheets/govuk-template-ie6.css")" media="screen" rel="stylesheet" type="text/css" /><![endif]-->
-    <!--[if IE 7]><link href="@routes.Assets.versioned("stylesheets/govuk-template-ie7.css")" media="screen" rel="stylesheet" type="text/css" /><![endif]-->
-    <!--[if IE 8]><link href="@routes.Assets.versioned("stylesheets/govuk-template-ie8.css")" media="screen" rel="stylesheet" type="text/css" /><![endif]-->
+    <!--[if gt IE 8]><!--><link href="@routes.Assets.at("stylesheets/application.css")" media="screen" rel="stylesheet" type="text/css" /><!--<![endif]-->
+    <!--[if IE 6]><link href="@routes.Assets.at("stylesheets/govuk-template-ie6.css")" media="screen" rel="stylesheet" type="text/css" /><![endif]-->
+    <!--[if IE 7]><link href="@routes.Assets.at("stylesheets/govuk-template-ie7.css")" media="screen" rel="stylesheet" type="text/css" /><![endif]-->
+    <!--[if IE 8]><link href="@routes.Assets.at("stylesheets/govuk-template-ie8.css")" media="screen" rel="stylesheet" type="text/css" /><![endif]-->
 
-    <link href="@routes.Assets.versioned("stylesheets/govuk-template-print.css")" media="print" rel="stylesheet" type="text/css" />
+    <link href="@routes.Assets.at("stylesheets/govuk-template-print.css")" media="print" rel="stylesheet" type="text/css" />
 
     <!--[if IE 8]>
     <script type="text/javascript">
       (function(){if(window.opera){return;}
        setTimeout(function(){var a=document,g,b={families:(g=
-       ["nta"]),urls:["@routes.Assets.versioned("stylesheets/fonts-ie8.css")"]},
-       c="@routes.Assets.versioned("javascripts/vendor/goog/webfont-debug.js")",d="script",
+       ["nta"]),urls:["@routes.Assets.at("stylesheets/fonts-ie8.css")"]},
+       c="@routes.Assets.at("javascripts/vendor/goog/webfont-debug.js")",d="script",
        e=a.createElement(d),f=a.getElementsByTagName(d)[0],h=g.length;WebFontConfig
        ={custom:b},e.src=c,f.parentNode.insertBefore(e,f);for(;h=h-1;a.documentElement
        .className+=' wf-'+g[h].replace(/\s/g,'').toLowerCase()+'-n4-loading');},0)
@@ -31,29 +31,29 @@
     </script>
     <![endif]-->
     <!--[if gte IE 9]><!-->
-      <link href="@routes.Assets.versioned("stylesheets/fonts.css")" media="all" rel="stylesheet" type="text/css" />
+      <link href="@routes.Assets.at("stylesheets/fonts.css")" media="all" rel="stylesheet" type="text/css" />
 
 
     <!--<![endif]-->
 
 
     <!--[if lt IE 9]>
-      <script src="@routes.Assets.versioned("javascripts/ie.js")" type="text/javascript"></script>
+      <script src="@routes.Assets.at("javascripts/ie.js")" type="text/javascript"></script>
     <![endif]-->
 
-    <link rel="shortcut icon" href="@routes.Assets.versioned("images/favicon.ico")" type="image/x-icon" />
+    <link rel="shortcut icon" href="@routes.Assets.at("images/favicon.ico")" type="image/x-icon" />
 
     <!-- Size for iPad and iPad mini (high resolution) -->
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="@routes.Assets.versioned("images/apple-touch-icon-152x152.png")">
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="@routes.Assets.at("images/apple-touch-icon-152x152.png")">
     <!-- Size for iPhone and iPod touch (high resolution) -->
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="@routes.Assets.versioned("images/apple-touch-icon-120x120.png")">
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="@routes.Assets.at("images/apple-touch-icon-120x120.png")">
     <!-- Size for iPad 2 and iPad mini (standard resolution) -->
-    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="@routes.Assets.versioned("images/apple-touch-icon-76x76.png")">
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="@routes.Assets.at("images/apple-touch-icon-76x76.png")">
     <!-- Default non-defined size, also used for Android 2.1+ devices -->
-    <link rel="apple-touch-icon-precomposed" href="@routes.Assets.versioned("images/apple-touch-icon-60x60.png")">
+    <link rel="apple-touch-icon-precomposed" href="@routes.Assets.at("images/apple-touch-icon-60x60.png")">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:image" content="@routes.Assets.versioned("images/opengraph-image.png")">
+    <meta property="og:image" content="@routes.Assets.at("images/opengraph-image.png")">
 
     @head
   </head>
@@ -84,7 +84,7 @@
         <div class="header-global">
           <div class="header-logo">
             <a href="https://www.gov.uk/" title="Go to the GOV.UK homepage" id="logo" class="content">
-              <img src="@routes.Assets.versioned("images/gov.uk_logotype_crown.png")" width="35" height="31" alt=""> GOV.UK
+              <img src="@routes.Assets.at("images/gov.uk_logotype_crown.png")" width="35" height="31" alt=""> GOV.UK
             </a>
           </div>
         </div>
@@ -131,7 +131,7 @@
 
     <div id="global-app-error" class="app-error hidden"></div>
 
-    <script src="@routes.Assets.versioned("javascripts/govuk-template.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/govuk-template.js")" type="text/javascript"></script>
 
     @bodyEnd
   </body>
