--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,8 +1,8 @@
 @(title: String, mainClass: Option[String] = None, bodyEnd: Html = Html(""), headExtra: Html = Html(""), links: Html = Html(""))(content: Html)
 
 @head = {
-    <link href="@routes.Assets.versioned("stylesheets/main.css")" rel="stylesheet" type="text/css" />
-    <link href="@routes.Assets.versioned("stylesheets/elements.css")" media="screen" rel="stylesheet" type="text/css" />
+    <link href="@routes.Assets.at("stylesheets/main.css")" rel="stylesheet" type="text/css" />
+    <link href="@routes.Assets.at("stylesheets/elements.css")" media="screen" rel="stylesheet" type="text/css" />
 @headExtra
 }
 
