--- a/app/views/gateway/claim.scala.html
+++ b/app/views/gateway/claim.scala.html
@@ -9,20 +9,21 @@
         </p>
     </div>
     <div>
-        <h2>Digital Tax Platform</h2>
-        <h3>The Digital Apprenticeship Service would like to access information about a PAYE scheme with Employer Reference @empref</h3>
-        <h2>The application <em>will</em> be able to:</h2>
-        <div class="panel">
-            <p>See details of levy declarations made against this payroll scheme</p>
-            <p>See the termination date of the payroll scheme (if any)</p>
-        </div>
-        <h2>The application <em>will not</em> be able to:</h2>
-        <div class="panel">
-            <p>See any other information about the payroll scheme</p>
-            <p>Submit any information on behalf of the payroll scheme</p>
-        </div>
-        <a class="button" href="@controllers.gateway.routes.ClaimAuthController.confirm(empref, clientId, redirectUri)">
-            Allow access</a>
-        <a class="button" href="">Do not allow access</a>
+        <article class="content__body">
+            <h2>The Digital Apprenticeship Service would like to access information about your PAYE scheme with Employer Reference @empref</h2>
+            <div class="panel">
+                <h2>The application <em>will</em> be able to:</h2>
+                <p>See details of levy declarations made against this payroll scheme</p>
+                <p>See the termination date of the payroll scheme (if any)</p>
+            </div>
+            <div class="panel">
+                <h2>The application <em>will not</em> be able to:</h2>
+                <p>See any other information about the payroll scheme</p>
+                <p>Submit any information on behalf of the payroll scheme</p>
+            </div>
+            <a class="button" href="@controllers.gateway.routes.ClaimAuthController.confirm(empref, clientId, redirectUri)">
+                Allow access</a>
+            <a class="button" href="">Do not allow access</a>
+        </article>
     </div>
 }
