--- a/app/views/gateway/login.scala.html
+++ b/app/views/gateway/login.scala.html
@@ -12,29 +12,28 @@
                         <a href="">feedback</a>.</span>
                 </p>
             </div>
-            <h2>Digital Tax Platform</h2>
-            <h3>Log in with your Government Gateway ID</h3>
-            <form method="post" action="@controllers.gateway.routes.GatewayLoginController.handleLogin()">
-                <div id="errors">
-                @form.errors.map { e => <div>@e.messages.head</div> }
-                </div>
-                <fieldset class="form-field-group">
-                    <div class="form-field">
-                        <label for="username">
-                            User name
-                            <input type="text" id="username" name="username" value="@form.value.getOrElse("")"/>
-                        </label>
+
+            <article class="content__body">
+                <h1>Sign in</h1>
+                <p>Enter your Government Gateway credentials to sign in. You received these when you created your HMRC online account.</p>
+                <form method="post" action="@controllers.gateway.routes.GatewayLoginController.handleLogin()">
+                    <div id="errors">
+                    @form.errors.map { e => <div>@e.messages.head</div> }
                     </div>
-                    <div class="form-field">
-                        <label for="password">
-                            Password
-                            <input type="password" id="password" name="password"/>
-                        </label>
-                    </div>
-                    <div class="form-field">
-                        <input class="button" type="submit" value="Login"/>
-                    </div>
-                </fieldset>
-            </form>
+                    <fieldset class="form-field-group">
+                        <div class="form-field">
+                            <label class="label--inline" for="userId">User ID</label>
+                            <input type="text" id="userId" name="userId" required />
+                        </div>
+                        <div class="form-field">
+                            <label class="label--inline" for="password">Password</label>
+                            <input type="password" id="password" required name="password"/>
+                        </div>
+                        <div class="form-field">
+                            <input class="button" type="submit" value="Sign in"/>
+                        </div>
+                    </fieldset>
+                </form>
+            </article>
         </div>
     }
