--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String, mainClass: Option[String] = None, bodyEnd: Html = Html(""), headExtra: Html = Html(""), links: Html = Html(""))(content: Html)
+@(title: String, mainClass: Option[String] = None, bodyEnd: Html = Html(""), headExtra: Html = Html(""), insideHeader :Html = Html(""), links: Html = Html(""))(content: Html)
 
 @head = {
     <link href="@routes.Assets.at("stylesheets/fonts.css")" media="screen" rel="stylesheet" type="text/css" />
@@ -9,13 +9,6 @@
 
 @empty = {}
 
-
-@insideHeader = {
-    <div class="header-proposition">
-        <div class="content">
-        </div>
-    </div>
-}
 
 @layouts.govuk_template2(Some(title), None)(head, empty, bodyEnd, insideHeader, empty, empty) {
     <main id="content" class="@mainClass" role="main">
