Re-name login/logout to signIn/signOut to be consistent with tax platform terminology

--- a/app/views/gateway/claim.scala.html
+++ b/app/views/gateway/claim.scala.html
@@ -7,7 +7,7 @@
                 <span class="header__menu__proposition-name">Business tax account</span>
 
                 <ul id="proposition-links" class="header__menu__proposition-links">
-                    <li><a id="logOutNavHref" href="@controllers.gateway.routes.GatewayLoginController.logout()" data-journey-click="primary-navigation:Click:Sign out">
+                    <li><a id="logOutNavHref" href="@controllers.gateway.routes.GatewaySignInController.signOut()" data-journey-click="primary-navigation:Click:Sign out">
                         Sign out</a></li>
                 </ul>
             </nav>
