--- a/app/views/gateway/signIn.scala.html
+++ b/app/views/gateway/signIn.scala.html
@@ -16,7 +16,7 @@
             <article class="content__body">
                 <h1>Sign in</h1>
                 <p>Enter your Government Gateway credentials to sign in. You received these when you created your HMRC online account.</p>
-                <form method="post" action="@controllers.gateway.routes.GatewayLoginController.handleLogin()">
+                <form method="post" action="@controllers.gateway.routes.GatewaySignInController.handleSignIn()">
                     <div id="errors">
                     @form.errors.map { e => <div>@e.messages.head</div> }
                     </div>
