Factored out the case classes for the db rows and the Ops traits into a separate package and am now wiring the dependency injection in the Module.

--- a/app/views/admin/applications.scala.html
+++ b/app/views/admin/applications.scala.html
@@ -1,4 +1,4 @@
-@import db.outh2.ClientRow
+@import db.oauth2.ClientRow
 @import controllers.admin.AddAppFormData
 @(form: Form[AddAppFormData], cs: Seq[ClientRow])
 
