Fixed label on access code text field

--- a/src/main/twirl/views/gateway/accesscode.scala.html
+++ b/src/main/twirl/views/gateway/accesscode.scala.html
@@ -23,7 +23,7 @@
             <form method="post" action="@gateway.routes.AccessCodeController.handleAccessCode()">
                 <fieldset class="form-field-group">
                     <div class="form-field">
-                        <label class="label--inline" for="accessCode">User ID</label>
+                        <label class="label--inline" for="accessCode">Access code</label>
                         <input type="text" id="accessCode" name="accessCode" required />
                     </div>
                     <div class="form-field">
