--- a/src/main/twirl/views/gateway/accesscode.scala.html
+++ b/src/main/twirl/views/gateway/accesscode.scala.html
@@ -1,6 +1,6 @@
 @import uk.gov.bis.taxserviceMock.controllers.gateway
 
-@()
+@(continue: String, origin: Option[String])
 
 @proposition = {
     <div class="header-proposition">
@@ -19,7 +19,7 @@
             <p>We just sent a 6-digit access code by text to: <strong>*********000</strong></p>
             <p>It may take a few minutes to arrive.</p>
             <div class="alert">No need to enter anything here - just press Continue.</div>
-            <form method="post" action="@gateway.routes.AccessCodeController.handleAccessCode()">
+            <form method="post" action="@gateway.routes.AccessCodeController.handleAccessCode(continue, origin)">
                 <fieldset class="form-field-group">
                     <div class="form-field">
                         <label class="label--inline" for="accessCode">Access code</label>
