--- a/src/main/twirl/views/gateway/signIn.scala.html
+++ b/src/main/twirl/views/gateway/signIn.scala.html
@@ -2,7 +2,7 @@
 @import uk.gov.bis.taxserviceMock.controllers.gateway
 @import uk.gov.bis.taxserviceMock.controllers.gateway.UserData
 
-@(form: Form[UserData])
+@(continue:String, origin: Option[String], form: Form[UserData])
 
 @proposition = {
     <div class="header-proposition">
@@ -20,11 +20,12 @@
             <h1>Sign in</h1>
             <p>Enter your Government Gateway credentials to sign in. You received these when you created your HMRC online account.</p>
             <div class="alert">NOTE: This is a mockup of the HMRC Tax Platform - DO NOT ENTER LIVE GATEWAY CREDENTIALS!</div>
-            <form method="post" action="@gateway.routes.GatewaySignInController.handleSignIn()">
+            <form method="post" action="@gateway.routes.GatewaySignInController.handleSignIn(continue, origin)">
                 <div id="errors">
                 @form.errors.map { e => <div>@e.messages.head</div> }
                 </div>
                 <fieldset class="form-field-group">
+                    <input type="hidden" name="continue"
                     <div class="form-field">
                         <label class="label--inline" for="userId">User ID</label>
                         <input type="text" id="userId" name="userId" required />
