--- a/src/main/twirl/views/signIn.scala.html
+++ b/src/main/twirl/views/signIn.scala.html
@@ -1,6 +1,5 @@
 @import play.api.data.Form
-@import uk.gov.bis.taxserviceMock.controllers.gateway
-@import uk.gov.bis.taxserviceMock.controllers.gateway.UserData
+@import uk.gov.bis.taxserviceMock.controllers._
 
 @(continue:String, origin: Option[String], form: Form[UserData])
 
@@ -20,7 +19,7 @@
             <h1>Sign in</h1>
             <p>Enter your Government Gateway credentials to sign in. You received these when you created your HMRC online account.</p>
             <div class="alert">NOTE: This is a mockup of the HMRC Tax Platform - DO NOT ENTER LIVE GATEWAY CREDENTIALS!</div>
-            <form method="post" action="@gateway.routes.GatewaySignInController.handleSignIn(continue, origin)">
+            <form method="post" action="@routes.GatewaySignInController.handleSignIn(continue, origin)">
                 <div id="errors">
                 @form.errors.map { e => <div>@e.messages.head</div> }
                 </div>
