--- a/src/main/twirl/views/accesscode.scala.html
+++ b/src/main/twirl/views/accesscode.scala.html
@@ -1,4 +1,4 @@
-@import uk.gov.bis.taxserviceMock.controllers.gateway
+@import uk.gov.bis.taxserviceMock.controllers._
 
 @(continue: String, origin: Option[String])
 
@@ -19,7 +19,7 @@
             <p>We just sent a 6-digit access code by text to: <strong>*********000</strong></p>
             <p>It may take a few minutes to arrive.</p>
             <div class="alert">No need to enter anything here - just press Continue.</div>
-            <form method="post" action="@gateway.routes.AccessCodeController.handleAccessCode(continue, origin)">
+            <form method="post" action="@routes.AccessCodeController.handleAccessCode(continue, origin)">
                 <fieldset class="form-field-group">
                     <div class="form-field">
                         <label class="label--inline" for="accessCode">Access code</label>
