Removed the Crown logos and gov.uk links in readiness for the DAS beta test.

--- a/src/main/twirl/views/accesscode.scala.html
+++ b/src/main/twirl/views/accesscode.scala.html
@@ -12,7 +12,7 @@
     </div>
 }
 
-@main("Enter your access code", insideHeader = proposition) {
+@main("Enter your access code") {
     <div>
         <article class="content__body">
             <h1>Enter your access code.</h1>
