--- a/src/main/twirl/views/signIn.scala.html
+++ b/src/main/twirl/views/signIn.scala.html
@@ -7,7 +7,7 @@
     <div class="header-proposition">
         <div class="content">
             <nav id="proposition-menu" class="header__menu" role="navigation">
-                <span class="header__menu__proposition-name">Business tax account</span>
+                <span class="header__menu__proposition-name">&nbsp</span>
             </nav>
         </div>
     </div>
